Mensajito de lo que hiciste

--- a/formulario.html
+++ b/formulario.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Formulario</h1>
+    <h1>Formulario Dianela Correa</h1>
     <form action="envio.php" method="post" target="_blank">
         <label for="usuario">Usuario:</label>
         <input type="text" id="usuario" size="tamaño"
@@ -82,7 +82,7 @@
         <br>
         <br>
 
-        <label for="Aviso">Los campos con * son obligatorios:</label>
+        <label for="Aviso">Los campos con * son obligatorios</label>
 
 
 
