--- a/formulario.html
+++ b/formulario.html
@@ -75,7 +75,7 @@
 
         <br>
         <br>
-        <input type="button" onclick="alert(anotate en mis clases)" value="Saludando">
+        <input type="button" onclick="alert('anotate en mis clases')" value="Saludando">
         <br>
         <br>
         <br>
